Allow setting request timeouts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ http = "0.1.5"
 bytes = "0.4"
 hyper-rustls = "0.14"
 rustls = "0.13"
-tokio-core = "0.1.17"
+tokio = "0.1.8"
 futures = "0.1"
 ct-logs = "0.4"
 webpki-roots = "0.15"
