--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ travis-ci = { repository = "kpcyrd/chrootable-https" }
 failure = "0.1.1"
 log = "0.4"
 
-trust-dns-resolver = "0.10.0-alpha.1"
-trust-dns-proto = "0.5.0-alpha.1"
+trust-dns-resolver = "0.10.0"
+trust-dns-proto = "0.5.0"
 
 serde = "1.0"
 serde_derive = "1.0"
@@ -33,3 +33,4 @@ webpki-roots = "0.15"
 [dev-dependencies]
 env_logger = "0.5"
 serde_json = "1.0"
+structopt = "0.2"
