--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ travis-ci = { repository = "kpcyrd/chrootable-https" }
 failure = "0.1.1"
 log = "0.4"
 
-trust-dns-resolver = "0.10.0"
-trust-dns-proto = "0.5.0"
+trust-dns = "0.15"
+trust-dns-proto = "0.5"
 
 serde = "1.0"
 serde_derive = "1.0"
@@ -29,6 +29,12 @@ tokio = "0.1.8"
 futures = "0.1"
 ct-logs = "0.4"
 webpki-roots = "0.15"
+
+[target.'cfg(unix)'.dependencies]
+resolv-conf = { version = "0.6.0", features = ["system"] }
+
+[target.'cfg(windows)'.dependencies]
+ipconfig = "0.1.7"
 
 [dev-dependencies]
 env_logger = "0.6"
