--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde_derive = "1.0"
 hyper = "0.12"
 http = "0.1.5"
 bytes = "0.4"
+byteorder = "1.2"
 hyper-rustls = "0.15"
 rustls = "0.14"
 tokio = "0.1.8"
